--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,15 @@
 {
+  "editor.formatOnSave": false,
+  "typescript.validate.enable": true,
+  "typescript.format.enable": false,
+  "javascript.validate.enable": true,
+  "javascript.format.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib",
   "eslint.autoFixOnSave": true,
-  "editor.formatOnSave": true,
   "eslint.options": { "ignorePath": ".gitignore" },
   "eslint.validate": [
     { "language": "javascript", "autoFix": true },
     { "language": "typescript", "autoFix": true },
     { "language": "typescriptreact", "autoFix": true }
-  ],
-  "[javascript]": {
-    "editor.formatOnSave": false
-  },
-  "[javascriptreact]": {
-    "editor.formatOnSave": false
-  },
-  "[typescript]": {
-    "editor.formatOnSave": false
-  },
-  "[typescriptreact]": {
-    "editor.formatOnSave": false
-  }
+  ]
 }
