--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "webextension boilerplate",
   "scripts": {
     "lint": "tsc --noEmit && eslint --ext .ts --fix src/",
-    "start": "web-ext --config web-ext.config.js run",
+    "start:firefox": "web-ext --config web-ext.config.js run",
+    "start:chromium": "npm run start:firefox -- -t chromium",
+    "start": "concurrently npm:watch npm:start:chromium",
     "build": "webpack --mode=development",
+    "postinstall": "npm run build",
     "build:xpi": "npm run build && web-ext --config web-ext.config.js sign",
     "build:zip": "npm run build && web-ext --config web-ext.config.js build",
     "watch": "npm run build -- --watch"
@@ -32,6 +35,7 @@
     "@typescript-eslint/parser": "^2.25.0",
     "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
@@ -44,7 +48,7 @@
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "url-loader": "^2.3.0",
-    "web-ext": "^4.1.0",
+    "web-ext": "^4.2.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
