--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
   },
   "homepage": "https://github.com/mantou132/webextension-boilerplate#readme",
   "dependencies": {
-    "webextension-polyfill-ts": "^0.13.0"
+    "webextension-polyfill-ts": "^0.21.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.2.0",
-    "copy-webpack-plugin": "^6.0.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
+    "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^6.3.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "file-loader": "^4.3.0",
-    "husky": "^2.7.0",
-    "lint-staged": "^8.2.1",
-    "prettier": "^1.19.1",
-    "ts-loader": "^6.2.2",
-    "typescript": "^3.9.5",
-    "url-loader": "^2.3.0",
-    "web-ext": "^4.3.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "file-loader": "^6.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
+    "ts-loader": "^8.0.9",
+    "typescript": "^4.0.5",
+    "url-loader": "^4.1.1",
+    "web-ext": "^5.3.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "husky": {
     "hooks": {
@@ -57,9 +57,6 @@
     }
   },
   "lint-staged": {
-    "*.ts": [
-      "npm run lint",
-      "git add"
-    ]
+    "*.ts": "npm run lint"
   }
 }
